--- a/src/src/styles/quill.custom.css
+++ b/src/src/styles/quill.custom.css
@@ -1,5 +1,6 @@
 .ql-container {
     font-family: "Pretendard Variable", Pretendard, -apple-system, BlinkMacSystemFont, system-ui, Roboto, "Helvetica Neue", "Segoe UI", "Apple SD Gothic Neo", "Noto Sans KR", "Malgun Gothic", "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", sans-serif;
+    font-size: 16px;
 }
 
 .ql-container strong {
